--- a/src/contents/마크다운 문법 정리.md
+++ b/src/contents/마크다운 문법 정리.md
@@ -52,6 +52,8 @@ html의 제목 태그`(<h1> ~ <h6>)`를 표현 할 때 사용함
 
 ## 목록(list)
 
+---
+
 목록 태그`<ol>`, `<ul>` 를 나타내기 위한 문법
 
 ```markdown
@@ -148,6 +150,20 @@ function func(){
 	return msg;
 }	
 `` `
+
+`` `css
+.container ol li, .container ul li {
+    padding: 5px 0;
+}
+`` `
+
+`` `java
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, world!");
+    }
+} 
+`` `
 ```
 
 ```javascript
@@ -155,6 +171,20 @@ function func(){
 	let msg = 'message';
 	return msg;
 }	
+```
+
+```css
+.container ol li, .container ul li {
+    padding: 5px 0;
+}
+```
+
+```java
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, world!");
+    }
+} 
 ```
 
 ## 표(table)
